--- a/proyecto.prod/recolector-app/back-end/package.json
+++ b/proyecto.prod/recolector-app/back-end/package.json
@@ -8,6 +8,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "ms": "^2.1.3",
+    "multer": "^2.0.2",
     "mysql2": "^3.14.1"
   },
   "name": "back-end",
@@ -32,6 +33,7 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/ms": "^2.1.0",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.3.0",
     "tsx": "^4.20.4",
     "typescript": "^5.9.2"
