--- a/proyecto.prod/recolector-app/front-end/package.json
+++ b/proyecto.prod/recolector-app/front-end/package.json
@@ -13,11 +13,13 @@
     "@mapbox/polyline": "^1.2.1",
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.4.5",
+    "@react-navigation/drawer": "^7.5.9",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
     "axios": "^1.10.0",
     "density-clustering": "^1.3.0",
     "dotenv": "^17.2.1",
+    "expo-image-picker": "~17.0.8",
     "expo-location": "~19.0.7",
     "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
