--- a/proyecto.prod/admin-web/back-end/package.json
+++ b/proyecto.prod/admin-web/back-end/package.json
@@ -2,7 +2,9 @@
   "name": "back-end",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
 "scripts": {
+  "start": "node index.js",
   "dev": "nodemon index.js"
 }
 ,
