--- a/proyecto.prod/recolector-app/front-end/package.json
+++ b/proyecto.prod/recolector-app/front-end/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
     "@mapbox/polyline": "^1.2.1",
+    "@react-native-community/datetimepicker": "^8.4.5",
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.4.5",
     "@react-navigation/drawer": "^7.5.9",
