--- a/proyecto.prod/usuario-app/front/package.json
+++ b/proyecto.prod/usuario-app/front/package.json
@@ -40,6 +40,7 @@
     "@babel/core": "^7.25.2",
     "@eslint/js": "^9.34.0",
     "@types/react": "19.1.10",
+    "@types/react-native": "^0.72.8",
     "@typescript-eslint/eslint-plugin": "^8.41.0",
     "@typescript-eslint/parser": "^8.41.0",
     "babel-plugin-module-resolver": "^5.0.2",
