--- a/proyecto.prod/recolector-app/back-end/package.json
+++ b/proyecto.prod/recolector-app/back-end/package.json
@@ -9,7 +9,8 @@
     "jsonwebtoken": "^9.0.2",
     "ms": "^2.1.3",
     "multer": "^2.0.2",
-    "mysql2": "^3.14.1"
+    "mysql2": "^3.14.1",
+    "nodemailer": "^7.0.10"
   },
   "name": "back-end",
   "version": "1.0.0",
@@ -35,6 +36,7 @@
     "@types/ms": "^2.1.0",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.3.0",
+    "@types/nodemailer": "^7.0.4",
     "tsx": "^4.20.4",
     "typescript": "^5.9.2"
   }
