--- a/proyecto.prod/recolector-app/front-end/package.json
+++ b/proyecto.prod/recolector-app/front-end/package.json
@@ -33,12 +33,14 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "^15.13.0",
+    "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "^19.1.11",
     "@types/react-native": "^0.72.8",
+    "@types/react-native-vector-icons": "^6.4.18",
     "expo": "^54.0.10",
     "typescript": "^5.9.2"
   },
