--- a/proyecto.prod/recolector-app/back-end/tsconfig.json
+++ b/proyecto.prod/recolector-app/back-end/tsconfig.json
@@ -11,5 +11,5 @@
     "skipLibCheck": true,
     "resolveJsonModule": true
   },
-  "include": ["src", "controllers", "src/routes",  "types"]
+  "include": ["src"]
 }
