--- a/proyecto.prod/usuario-app/back/package.json
+++ b/proyecto.prod/usuario-app/back/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch -r tsconfig-paths/register src/server.ts",
-    "start": "node -r tsconfig-paths/register dist/server.js",
-    "build": "tsc -p tsconfig.json"
+    "dev": "tsx watch src/index.ts",
+    "build": "tsc -p tsconfig.json",
+    "start": "node dist/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
