--- a/proyecto.prod/usuario-app/back/tsconfig.json
+++ b/proyecto.prod/usuario-app/back/tsconfig.json
@@ -12,10 +12,10 @@
     "types": [
       "node"
     ],
-    "baseUrl": ".",
+    "baseUrl": "src",
     "paths": {
       "@/*": [
-        "src/*"
+        "*"
       ]
     }
   },
