--- a/proyecto.prod/usuario-app/back/tsconfig.json
+++ b/proyecto.prod/usuario-app/back/tsconfig.json
@@ -7,7 +7,12 @@
     ],
     "outDir": "./dist",
     "rootDir": "./src",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    },
     "strict": true,
+    "noImplicitAny": false,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
