--- a/proyecto.prod/usuario-app/back/package.json
+++ b/proyecto.prod/usuario-app/back/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "build": "tsc",
-    "start": "node dist/server.js"
+    "start": "node start.js"
+  },
+  "_moduleAliases": {
+    "@": "dist"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +21,7 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "module-alias": "^2.2.2",
     "multer": "^2.0.2",
     "mysql2": "^3.14.4",
     "nodemailer": "^7.0.9",
